--- a/package.json
+++ b/package.json
@@ -5,11 +5,17 @@
   "main": "index.js",
   "dependencies": {
     "axios": "^0.18.0",
-    "dropbox": "^4.0.16"
+    "dropbox": "^4.0.16",
+    "marked": "^0.6.1"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "webpack": "^4.29.6",
+    "webpack-cli": "^3.2.3"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "webpack --mode development --watch",
+    "build": "webpack --mode production"
   },
   "repository": {
     "type": "git",
