--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "marked": "^0.6.1"
   },
   "devDependencies": {
+    "css-loader": "^2.1.1",
+    "style-loader": "^0.23.1",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.2.3"
   },
