--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
   },
   "devDependencies": {
     "css-loader": "^2.1.1",
-    "file-loader": "^3.0.1",
     "style-loader": "^0.23.1",
+    "url-loader": "^2.0.0",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.2.3",
     "webpack-dev-server": "^3.2.1"
